# Hello_Prompt

./: README.md  pyproject.toml
configs/: agent.yaml  llm.yaml  templates.json  templates.yaml
docs/: ARCHITECTURE.md  PROJECT_STATUS_FOR_WEB_LLM.md  USAGE.md  USAGE_LLM.md
exports/: session_20260301_202930.json
src/agent/: __init__.py  agent_config.py  json_utils.py  llm_agent_engine.py  llm_questioner.py  llm_refiner.py  llm_slot_extractor.py  todolist.md
src/hpa/: __init__.py  checklist.py  cli.py  composer.py  config.py  engine.py  extractor.py  llm_client.py  llm_config.py  state.py
src/hpa/application/: __init__.py  clarification_service.py  composition_service.py  contracts.py  mode_service.py  question_service.py  repair_service.py  session_service.py  slot_service.py  validation_service.py
src/hpa/domain/: __init__.py  models.py  session.py  templates.py
src/hpa/infrastructure/: __init__.py  capability_provider.py  config_loader.py  exporter.py  session_store.py  template_repository.py
src/hpa/interfaces/: __init__.py  cli_agent.py  cli_chat.py  web_app.py
src/hpa/utils/: __init__.py  json_utils.py  text.py
src/hpa/webapp/: __init__.py  app.css  (+2 more)
tests/: __init__.py  test_agent_cli_bootstrap.py  test_clarification_flow.py  test_cli_bootstrap.py  test_commands_and_document.py  test_composer.py  test_engine_commands.py  test_engine_manual_mode.py  test_extractor.py  test_helpers.py  test_llm.py  test_llm_assisted_engine_flow.py  test_llm_questioner.py  test_llm_slot_extractor.py  test_mode_routing_and_composer.py  test_validation_and_repair.py
(+5 files in other folders)
