[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-prompt-agent"
version = "0.1.0"
description = "A CLI-first prompt clarification and prompt-growth framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3,<1",
    "langchain-openai>=0.3,<1",
    "pydantic>=2,<3",
    "PyYAML>=6.0",
]

[project.scripts]
hpa = "hpa.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
